--- a/editor.html
+++ b/editor.html
@@ -85,6 +85,9 @@
       // KONFIGURATION
       const DEFAULT_BITBUCKET_URL = "";
 
+      // Verfügbare Zielgruppen
+      const AVAILABLE_AUDIENCES = ["ADMIN", "USER", "DEVOPS"];
+
       // Globale Daten
       let releaseNotes = [];
       let nextId = 0;
@@ -206,9 +209,7 @@
                         <div class="flex justify-between items-center">
                             <div class="flex-1">
                                 <h3 class="text-lg font-semibold">
-                                    Version ${rn.version || "N/A"} - ${
-            rn.title || "Ohne Titel"
-          }
+                                    Version ${rn.version || "N/A"}
                                 </h3>
                                 <p class="text-sm text-gray-600">Datum: ${renderDate(
                                   rn.date
@@ -263,16 +264,6 @@
                             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500">
                     </div>
 
-                    <!-- Title -->
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Titel *</label>
-                        <input type="text" id="title-${rn._id}" value="${
-          rn.title || ""
-        }" 
-                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500"
-                            placeholder="Release-Titel">
-                    </div>
-
                     <!-- Changes -->
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-2">Änderungen *</label>
@@ -306,57 +297,34 @@
                         </button>
                     </div>
                     
-                    <!-- Type -->
+                    <!-- Title -->
                     <div class="mb-3">
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Typ *</label>
-                        <select id="type-${rnId}-${changeIndex}" 
-                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500">
-                            <option value="feature" ${
-                              change.type === "feature" ? "selected" : ""
-                            }>Feature</option>
-                            <option value="fix" ${
-                              change.type === "fix" ? "selected" : ""
-                            }>Fix</option>
-                            <option value="change" ${
-                              change.type === "change" ? "selected" : ""
-                            }>Change</option>
-                        </select>
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Title *</label>
+                        <input type="text" id="title-${rnId}-${changeIndex}" 
+                            value="${change.title || ""}"
+                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500"
+                            placeholder="Titel der Änderung">
                     </div>
 
                     <!-- Audience -->
                     <div class="mb-3">
-                        <label class="block text-sm font-medium text-gray-700 mb-1">Zielgruppe * (mindestens eine)</label>
-                        <div class="space-y-2">
+                        <label class="block text-sm font-medium text-gray-700 mb-1">Zielgruppe *</label>
+                        <div class="flex flex-wrap items-center gap-4">
+                            ${AVAILABLE_AUDIENCES.map(
+                              (aud) => `
                             <label class="flex items-center">
-                                <input type="checkbox" id="audience-admin-${rnId}-${changeIndex}" 
+                                <input type="checkbox" id="audience-${aud.toLowerCase()}-${rnId}-${changeIndex}" 
                                     ${
-                                      (change.audience || []).includes("ADMIN")
+                                      (
+                                        change.audience || AVAILABLE_AUDIENCES
+                                      ).includes(aud)
                                         ? "checked"
                                         : ""
                                     }
                                     class="mr-2">
-                                <span>ADMIN</span>
-                            </label>
-                            <label class="flex items-center">
-                                <input type="checkbox" id="audience-user-${rnId}-${changeIndex}" 
-                                    ${
-                                      (change.audience || []).includes("USER")
-                                        ? "checked"
-                                        : ""
-                                    }
-                                    class="mr-2">
-                                <span>USER</span>
-                            </label>
-                            <label class="flex items-center">
-                                <input type="checkbox" id="audience-devops-${rnId}-${changeIndex}" 
-                                    ${
-                                      (change.audience || []).includes("DEVOPS")
-                                        ? "checked"
-                                        : ""
-                                    }
-                                    class="mr-2">
-                                <span>DEVOPS</span>
-                            </label>
+                                <span>${aud}</span>
+                            </label>`
+                            ).join("")}
                         </div>
                     </div>
 
@@ -421,7 +389,6 @@
           _id: nextId++,
           version: "",
           date: new Date().toISOString().split("T")[0],
-          title: "",
           changes: [],
         };
         releaseNotes.unshift(newReleaseNote); // Am Anfang einfügen
@@ -437,7 +404,6 @@
         // Daten aus Formular lesen
         const version = document.getElementById(`version-${id}`)?.value.trim();
         const date = document.getElementById(`date-${id}`)?.value.trim();
-        const title = document.getElementById(`title-${id}`)?.value.trim();
 
         // Validierung
         if (!version || !/^[0-9]+\.[0-9]+\.[0-9]+$/.test(version)) {
@@ -446,10 +412,6 @@
         }
         if (!date || !/^\d{4}-\d{2}-\d{2}$/.test(date)) {
           showMessage("Ungültiges Datum (Format: YYYY-MM-DD)", "error");
-          return;
-        }
-        if (!title || title.length < 1) {
-          showMessage("Titel fehlt", "error");
           return;
         }
 
@@ -463,26 +425,24 @@
           const changeIndex = parseInt(
             changeElements[i].getAttribute("data-change-index")
           );
-          const type = document.getElementById(
-            `type-${id}-${changeIndex}`
-          )?.value;
+          const title = document
+            .getElementById(`title-${id}-${changeIndex}`)
+            ?.value.trim();
+
+          if (!title || title.length < 1) {
+            showMessage(`Change ${changeIndex + 1}: Titel fehlt`, "error");
+            return;
+          }
 
           const audience = [];
-          if (
-            document.getElementById(`audience-admin-${id}-${changeIndex}`)
-              ?.checked
-          )
-            audience.push("ADMIN");
-          if (
-            document.getElementById(`audience-user-${id}-${changeIndex}`)
-              ?.checked
-          )
-            audience.push("USER");
-          if (
-            document.getElementById(`audience-devops-${id}-${changeIndex}`)
-              ?.checked
-          )
-            audience.push("DEVOPS");
+          for (const aud of AVAILABLE_AUDIENCES) {
+            if (
+              document.getElementById(
+                `audience-${aud.toLowerCase()}-${id}-${changeIndex}`
+              )?.checked
+            )
+              audience.push(aud);
+          }
 
           if (audience.length === 0) {
             showMessage(
@@ -529,7 +489,7 @@
             urlIndex++;
           }
 
-          const change = { type, audience, description };
+          const change = { title, audience, description };
           if (imageUrls.length > 0) change.imageUrls = imageUrls;
           changes.push(change);
         }
@@ -542,7 +502,6 @@
         // Daten in releaseNotes aktualisieren
         rn.version = version;
         rn.date = date;
-        rn.title = title;
         rn.changes = changes;
 
         renderReleaseNotes();
@@ -564,8 +523,8 @@
         if (!rn.changes) rn.changes = [];
 
         rn.changes.push({
-          type: "feature",
-          audience: [],
+          title: "",
+          audience: [...AVAILABLE_AUDIENCES],
           description: "",
           imageUrls: [],
         });
@@ -595,17 +554,18 @@
 
           if (idx === changeIndex) continue; // Die zu löschende Change überspringen
 
-          const type = document.getElementById(`type-${rnId}-${idx}`)?.value;
+          const title =
+            document.getElementById(`title-${rnId}-${idx}`)?.value.trim() || "";
 
           const audience = [];
-          if (document.getElementById(`audience-admin-${rnId}-${idx}`)?.checked)
-            audience.push("ADMIN");
-          if (document.getElementById(`audience-user-${rnId}-${idx}`)?.checked)
-            audience.push("USER");
-          if (
-            document.getElementById(`audience-devops-${rnId}-${idx}`)?.checked
-          )
-            audience.push("DEVOPS");
+          for (const aud of AVAILABLE_AUDIENCES) {
+            if (
+              document.getElementById(
+                `audience-${aud.toLowerCase()}-${rnId}-${idx}`
+              )?.checked
+            )
+              audience.push(aud);
+          }
 
           const description =
             document.getElementById(`description-${rnId}-${idx}`)?.value || "";
@@ -625,7 +585,7 @@
 
           // Daten aktualisieren
           if (rn.changes[idx]) {
-            rn.changes[idx].type = type;
+            rn.changes[idx].title = title;
             rn.changes[idx].audience = audience;
             rn.changes[idx].description = description;
             rn.changes[idx].imageUrls = imageUrls;
@@ -701,15 +661,6 @@
             continue;
           }
 
-          // Titel validieren
-          const title = document
-            .getElementById(`title-${rn._id}`)
-            ?.value.trim();
-          if (!title || title.length < 1) {
-            errors.push(`Release Note ID ${rn._id}: Titel fehlt`);
-            continue;
-          }
-
           // Changes sammeln und validieren
           const changes = [];
           const changeElements = document.querySelectorAll(
@@ -720,28 +671,29 @@
             const changeIndex = parseInt(
               changeElements[i].getAttribute("data-change-index")
             );
-            const type = document.getElementById(
-              `type-${rn._id}-${changeIndex}`
-            )?.value;
+            const title = document
+              .getElementById(`title-${rn._id}-${changeIndex}`)
+              ?.value.trim();
+
+            if (!title || title.length < 1) {
+              errors.push(
+                `Release Note ${version}, Change ${
+                  changeIndex + 1
+                }: Titel fehlt`
+              );
+              continue;
+            }
 
             // Audience sammeln
             const audience = [];
-            if (
-              document.getElementById(`audience-admin-${rn._id}-${changeIndex}`)
-                ?.checked
-            )
-              audience.push("ADMIN");
-            if (
-              document.getElementById(`audience-user-${rn._id}-${changeIndex}`)
-                ?.checked
-            )
-              audience.push("USER");
-            if (
-              document.getElementById(
-                `audience-devops-${rn._id}-${changeIndex}`
-              )?.checked
-            )
-              audience.push("DEVOPS");
+            for (const aud of AVAILABLE_AUDIENCES) {
+              if (
+                document.getElementById(
+                  `audience-${aud.toLowerCase()}-${rn._id}-${changeIndex}`
+                )?.checked
+              )
+                audience.push(aud);
+            }
 
             if (audience.length === 0) {
               errors.push(
@@ -789,7 +741,7 @@
             }
 
             const change = {
-              type,
+              title,
               audience,
               description,
             };
@@ -811,7 +763,6 @@
           result.push({
             version,
             date,
-            title,
             changes,
           });
         }
