--- a/editor.html
+++ b/editor.html
@@ -202,6 +202,13 @@
 
         // Sortieren nach Version (neueste zuerst)
         const sorted = [...releaseNotes].sort((a, b) => {
+          // Formular zur Erstellung an den Anfang setzen
+          if (a.version === "") {
+            return -1;
+          } else if (b.version === "") {
+            return 1;
+          }
+
           const versionA = (a.version || "0.0.0").split(".").map(Number);
           const versionB = (b.version || "0.0.0").split(".").map(Number);
 
